--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -36,39 +36,46 @@
     transform: rotate(360deg);
   }
 } */
+
 html {
-  height: 100%;
+    height: 100%;
 }
 
 body {
-  margin: 0;
-  color: black;
-  background-size: 100%;
-  margin: 0;
-  padding: 0;
-  min-height: 100%;
-  height: fit-content;
-  position: relative;
-
-  background: #fffefd;
+    margin: 0;
+    color: black;
+    background-size: 100%;
+    margin: 0;
+    padding: 0;
+    min-height: 100%;
+    height: fit-content;
+    position: relative;
+    background: #fffefd;
 }
 
 .view-divs {
-  height: fit-content;
-  min-height: 950px;
-  width: 100%;
-  padding: 0 0 0px 0;
+    height: fit-content;
+    min-height: 950px;
+    width: 100%;
+    padding: 0 0 0px 0;
 }
 
 a:link {
-  text-decoration: none;
-  color: black;
+    text-decoration: none;
+    color: black;
 }
+
 a:visited {
-  color: black;
+    color: black;
 }
 
 @font-face {
-  font-family: 'inter';
-  src: url(../../public/fonts/Inter/static/Inter-Regular.ttf);
+    font-family: 'inter';
+    src: url(../../public/fonts/Inter/static/Inter-Regular.ttf);
+}
+
+.app {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
