--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -5,9 +5,7 @@
 
   align-items: center;
   padding: 16px 72px;
-  /* gap: 8px;
-  left: 0px;
-  top: 0px; */
+  gap: 8px;
   font-family: 'inter';
   font-style: normal;
   font-weight: 400;
@@ -55,17 +53,16 @@
   border-radius: 0px;
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
+  justify-content: center;
   padding: 0px;
   gap: 40px;
 }
 
 .text-links-box {
-  /* margin-left: 40px; */
-  height: fit-content;
+  display: flex;
+  justify-content: center;
+  height: min-content;
   width: fit-content;
-  /* left: 0px;
-  top: 0px; */
   border-radius: 0px;
 }
 
@@ -89,6 +86,7 @@
   width: max-content;
   height: max-content;
   padding: 0;
+  margin: 0;
 }
 
 .nav-links li {
@@ -96,27 +94,34 @@
   text-decoration: none;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  /* justify-content: center; */
   padding: 0px;
   gap: 29.22px;
   height: 19.89px;
 }
 
-.nav-icons {
-  height: 19.88983917236328px;
-  width: 19.89263916015625px;
-  /* left: -0.001953125px;
-  top: 0.001953125px; */
-  display: flex;
-  align-items: center;
-  /* justify-content: center; */
-  margin: 10px;
-  border-radius: 0px;
-}
-
 .nav-links li a {
   display: flex;
   flex-direction: row;
+}
+
+.nav-links li a:hover {
+  color: #b68657;
+}
+
+.nav-icons {
+  height: 19.88983917236328px;
+  width: 19.89263916015625px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* margin: 10px; */
+  border-radius: 0px;
+}
+
+.shoppingbag {
+  margin-left: 29px;
 }
 
 p {
