--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -36,6 +36,11 @@
     transform: rotate(360deg);
   }
 } */
+/* @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@400&display=swap');
+
 @font-face {
   font-family: 'inter';
   src: url(../../public/fonts/Inter/static/Inter-Regular.ttf);
@@ -50,10 +55,7 @@
   font-family: 'Roboto';
   src: url(../../public/fonts/Roboto/Roboto-Regular.ttf);
 }
-body {
-  margin: 0;
-  line-height: normal;
-}
+
 :root {
   /* fonts */
   --font-inter: 'Inter';
@@ -135,6 +137,8 @@ body {
   height: fit-content;
   position: relative;
   background: #fffefd;
+  line-height: normal;
+
 }
 
 .view-divs {
