--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -1,24 +1,7 @@
 .navbar-container {
-<<<<<<< HEAD
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 16px 72px;
-    /* gap: 8px;
-  left: 0px;
-  top: 0px; */
-    font-family: 'inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    letter-spacing: 0.03em;
-=======
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-
   align-items: center;
   padding: 16px 72px;
   gap: 8px;
@@ -28,62 +11,42 @@
   font-size: 16px;
   line-height: 19px;
   letter-spacing: 0.03em;
->>>>>>> 76a2d67779c14f630b1f81c26fa876d98633fb96
 }
 
 .logo {
-    height: 69.8025131225586px;
-    width: 97.52962493896484px;
-    left: 0px;
-    top: 0px;
-    border-radius: 0px;
+  height: 69.8025131225586px;
+  width: 97.52962493896484px;
+  left: 0px;
+  top: 0px;
+  border-radius: 0px;
 }
 
 .navbar-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 16px 72px;
-    gap: 8px;
-    left: 0px;
-    top: 0px;
-    font-family: 'inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    letter-spacing: 0.03em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px 72px;
+  gap: 8px;
+  left: 0px;
+  top: 0px;
+  font-family: 'inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.03em;
 }
 
 .logo {
-    height: 69.8025131225586px;
-    width: 97.52962493896484px;
-    left: 0px;
-    top: 0px;
-    border-radius: 0px;
+  height: 69.8025131225586px;
+  width: 97.52962493896484px;
+  left: 0px;
+  top: 0px;
+  border-radius: 0px;
 }
 
 .nav-links-container {
-<<<<<<< HEAD
-    height: fit-content;
-    width: fit-content;
-    border-radius: 0px;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 40px;
-}
-
-.text-links-box {
-    /* margin-left: 40px; */
-    height: fit-content;
-    width: fit-content;
-    /* left: 0px;
-  top: 0px; */
-    border-radius: 0px;
-=======
   height: fit-content;
   width: fit-content;
   border-radius: 0px;
@@ -100,56 +63,21 @@
   height: min-content;
   width: fit-content;
   border-radius: 0px;
->>>>>>> 76a2d67779c14f630b1f81c26fa876d98633fb96
 }
 
 .nav-links-text a p {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
 .icon-links-box {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: fit-content;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: fit-content;
 }
 
 .nav-links {
-<<<<<<< HEAD
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    list-style: none;
-    width: max-content;
-    height: max-content;
-    padding: 0;
-}
-
-.nav-links li {
-    list-style: none;
-    text-decoration: none;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 0px;
-    gap: 29.22px;
-    height: 19.89px;
-}
-
-.nav-icons {
-    height: 19.88983917236328px;
-    width: 19.89263916015625px;
-    /* left: -0.001953125px;
-  top: 0.001953125px; */
-    display: flex;
-    align-items: center;
-    /* justify-content: center; */
-    margin: 10px;
-    border-radius: 0px;
-}
-
-=======
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -170,11 +98,9 @@
   gap: 29.22px;
   height: 19.89px;
 }
-
->>>>>>> 76a2d67779c14f630b1f81c26fa876d98633fb96
 .nav-links li a {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .nav-links li a:hover {
@@ -184,12 +110,9 @@
 .nav-icons {
   height: 19.88983917236328px;
   width: 19.89263916015625px;
-
   display: flex;
   align-items: center;
   justify-content: center;
-  /* margin: 10px; */
-  border-radius: 0px;
 }
 
 .shoppingbag {
@@ -197,18 +120,15 @@
 }
 
 p {
-    width: max-content;
-    margin-left: 20px;
+  width: max-content;
+  margin-left: 20px;
 }
 
-
-/* .navbar-container {
+.navbar-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-
-
 
 .nav-links {
   list-style: none;
@@ -219,4 +139,4 @@ p {
 .nav-icons {
   width: 20px;
   height: 20px;
-} */
+}
