--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -61,6 +61,7 @@
   --font-inter: 'Inter';
   --outon-button-text: 'Playfair';
   --outon-paragraph-text-1: 'Roboto';
+  --font-helvetica-neue: 'Helvetica Neue';
 
   /* font sizes */
   --outon-paragraph-text-1-size: 16px;
@@ -134,11 +135,12 @@ body {
   background-size: 100%;
   padding: 0;
   min-height: 100%;
+  max-width: 100%;
   height: fit-content;
-  position: relative;
+  /* position: relative; */
   background: #fffefd;
   line-height: normal;
-
+  overflow-x: hidden;
 }
 
 .view-divs {
