--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -1,3 +1,10 @@
+header {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  background-color: #ffffff;
+}
+
 .navbar-container {
   display: flex;
   flex-direction: row;
@@ -11,31 +18,19 @@
   font-size: 16px;
   line-height: 19px;
   letter-spacing: 0.03em;
+
+  box-shadow: 0px 23px 14px rgba(100, 50, 0, 0.02),
+    0px 10px 10px rgba(100, 50, 0, 0.03), 0px 3px 6px rgba(100, 50, 0, 0.03),
+    0px 0px 0px rgba(100, 50, 0, 0.03);
 }
 
-.logo {
+.nav-logo {
   height: 69.8025131225586px;
   width: 97.52962493896484px;
-  left: 0px;
-  top: 0px;
+  /* left: 0px;
+  top: 0px; */
   border-radius: 0px;
-}
-
-.navbar-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 16px 72px;
-  gap: 8px;
-  left: 0px;
-  top: 0px;
-  font-family: 'inter';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 19px;
-  letter-spacing: 0.03em;
+  margin: 0;
 }
 
 .logo {
@@ -65,9 +60,10 @@
   border-radius: 0px;
 }
 
-.nav-links-text a p {
-  display: flex;
-  justify-content: space-around;
+.nav-link-text a p {
+  /* display: flex;
+  justify-content: space-around; */
+  margin-left: 16px;
 }
 
 .icon-links-box {
@@ -107,7 +103,7 @@
   color: #b68657;
 }
 
-.nav-icons {
+/* .nav-icons {
   height: 19.88983917236328px;
   width: 19.89263916015625px;
   display: flex;
@@ -115,22 +111,16 @@
   justify-content: center;
   margin: 10px;
   border-radius: 0px;
-}
+} */
 
 .shoppingbag {
   margin-left: 29px;
 }
 
-p {
+/* p {
   width: max-content;
   margin-left: 20px;
-}
-
-.navbar-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+} */
 
 .nav-links {
   list-style: none;
