--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -18,8 +18,9 @@ header {
   font-size: 16px;
   line-height: 19px;
   letter-spacing: 0.03em;
+  width: 100%;
 
-  box-shadow: 0px 23px 14px rgba(100, 50, 0, 0.02),
+  box-shadow: 0px 23px rgba(100, 50, 0, 0.02),
     0px 10px 10px rgba(100, 50, 0, 0.03), 0px 3px 6px rgba(100, 50, 0, 0.03),
     0px 0px 0px rgba(100, 50, 0, 0.03);
 }
@@ -54,16 +55,22 @@ header {
 
 .text-links-box {
   display: flex;
-  justify-content: center;
   height: min-content;
   width: fit-content;
-  border-radius: 0px;
+  justify-content: space-between;
 }
 
-.nav-link-text a p {
-  /* display: flex;
-  justify-content: space-around; */
-  margin-left: 16px;
+.text-links-box ul {
+  display: flex;
+  gap: 20px;
+  margin: 0;
+}
+
+.nav-link-text a {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  /* padding-left: 16px; */
 }
 
 .icon-links-box {
@@ -71,6 +78,7 @@ header {
   flex-direction: row;
   align-items: center;
   width: fit-content;
+  height: fit-content;
 }
 
 .nav-links {
@@ -78,7 +86,7 @@ header {
   flex-direction: row;
   align-items: center;
   list-style: none;
-  width: max-content;
+  /* width: 500px; */
   height: max-content;
   padding: 0;
   margin: 0;
@@ -87,21 +95,29 @@ header {
 .nav-links li {
   list-style: none;
   text-decoration: none;
-  display: flex;
-  flex-direction: row;
+  /* display: flex;
+  flex-direction: row; */
   /* justify-content: center; */
   padding: 0px;
-  gap: 29.22px;
+  /* gap: 29.22px; */
   height: 19.89px;
 }
 .nav-links li a {
   display: flex;
   flex-direction: row;
+  transition: transform 0.2s ease-in-out;
 }
 
 .nav-links li a:hover {
-  color: #b68657;
+  color: var(--suave);
+  font-weight: bold;
+  transform: scale(1.1);
 }
+
+/* .active-link {
+  color: var(--suave);
+  font-weight: bolder;
+} */
 
 /* .nav-icons {
   height: 19.88983917236328px;
@@ -125,10 +141,33 @@ header {
 .nav-links {
   list-style: none;
   display: flex;
-  gap: 10px;
+  /* gap: 10px; */
+  justify-content: space-evenly;
+}
+
+.nav-link-text {
+  width: 140px;
+}
+
+.news {
+  width: fit-content;
+}
+
+.icons-ul {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  /* gap: 10px; */
 }
 
 .nav-icons {
   width: 20px;
   height: 20px;
+  transition: transform 0.2s ease-in-out;
+}
+
+.nav-icons:hover {
+  transform: scale(1.2);
+  cursor: pointer;
 }
