--- a/frontend/src/styles/StyleFeed.css
+++ b/frontend/src/styles/StyleFeed.css
@@ -1,5 +1,6 @@
 .style-feed1 {
   position: relative;
+  margin-top: 40px;
   letter-spacing: 0.04em;
   font-weight: 500;
 }
@@ -88,7 +89,7 @@
   align-items: center;
 }
 .button6 {
-  background-color: var(--outon-soft);
+  background-color: var(--soft);
   border: 3px solid var(--suave);
   box-sizing: border-box;
   height: 48px;
@@ -99,42 +100,50 @@
   font-size: var(--outon-button-text-size);
 }
 .style-feed {
-  position: absolute;
+  /* position: absolute;
   top: 72px;
-  left: 104.5px;
+  left: 104.5px; */
+  height: 1186px;
+  width: 1187px;
   flex-direction: column;
   justify-content: flex-start;
   gap: var(--gap-29xl);
+  background-color: white;
 }
 .style-feed-wrapper {
-  position: relative;
-  background-color: var(--outon-soft);
-  width: 1263px;
-  height: 1186px;
+  width: 100%;
+  /* height: 1186px; */
   overflow: hidden;
-  flex-shrink: 0;
+  /* flex-shrink: 0; */
+  margin: 0 auto; /* Center align the element horizontally */
 }
 .frame-wrapper2 {
-  position: absolute;
+  /* position: absolute;
   top: 144px;
-  left: 143.5px;
+  left: 143.5px; */
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
 }
 .style-feed-section-inner {
-  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--outon-sand);
-  width: 1550px;
+  background-color: var(--sand);
+  width: 100%;
   height: 1474px;
   overflow: hidden;
-  flex-shrink: 0;
   text-align: left;
   font-size: var(--outon-h3-size);
   color: var(--suave);
   font-family: var(--outon-button-text);
+  margin: 0 auto; /* Center align the element horizontally */
+}
+.hover-effect {
+  transition: transform 0.2s ease-in-out;
+}
+
+.hover-effect:hover {
+  transform: scale(1.1);
 }
