--- a/frontend/src/styles/LandingPage.css
+++ b/frontend/src/styles/LandingPage.css
@@ -11,7 +11,7 @@
 .hero-section {
   gap: var(--gap-13xl);
   text-align: center;
-  font-size: var(--font-size-109xl);
+  /* font-size: var(--font-size-109xl); */
   color: var(--suave);
   font-family: var(--outon-button-text);
   display: flex;
@@ -50,7 +50,7 @@
   gap: 10px;
 
   font-family: 'playfair';
-  font-size: --font-size-109xl;
+  font-size: var(--font-size-109xl);
   font-weight: 500;
   line-height: 130px;
   letter-spacing: 0em;
@@ -76,7 +76,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: var(--gap-13xl);
+  gap: var(--gap-5xl);
   font-size: var(--outon-paragraph-text-1-size);
   font-family: var(--outon-paragraph-text-1);
 }
@@ -92,8 +92,13 @@
   font-weight: 400;
   letter-spacing: 0.03em;
   text-align: center;
-  line-height: 21px;
-  width: 625px;
+  width: 600px;
+  line-height: 24px;
+  gap: var(--gap-5xl);
+}
+
+.hero-text {
+  margin: 0;
 }
 
 .shop-the-collection {
@@ -139,10 +144,11 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  margin-left: 200px;
-  margin-right: 200px;
+  margin-left: 100px;
+  margin-right: 100px;
   /* margin: 216px 207px 216px 207px; */
   height: 458px;
+  gap: 81.9px;
 }
 
 .brands-names {
@@ -176,25 +182,36 @@
   justify-content: center;
   align-items: center;
   background: #fffefd;
-  width: 40%;
+  width: 35%;
+  /* width: 390px; */
+
   height: 520px;
   margin: 41px;
   /* position: relative; */
   letter-spacing: 0.04em;
-  line-height: 67px;
+  /* line-height: 40px; */
   font-weight: 500;
   border-radius: 0px;
-  padding-top: 81px;
-  padding-bottom: 81px;
+  /* padding-top: 81px; */
+  /* padding-bottom: 81px; */
+  /* padding: 81px 18px 81px 18px; */
+}
+
+.try-on-text-inner {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 330px;
+  height: 350px;
 }
 
 .small-text-try-on {
-  height: 355px;
-  width: 372px;
+  height: fit-content;
+  width: fit-content;
   border-radius: 0px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   padding: 0px;
 }
 
@@ -210,10 +227,13 @@
   font-family: 'Playfair';
   font-size: var(--outon-h3-size);
   font-weight: 500;
-  line-height: 67px;
-  letter-spacing: 0.04em;
+  line-height: 60px;
+  letter-spacing: 0.03em;
   text-align: left;
   text-transform: uppercase;
+  width: fit-content;
+  /* font-size: 48px; */
+  /* gap: 64px; */
 }
 
 .elevate {
@@ -225,8 +245,8 @@
   letter-spacing: 0.03em;
   text-align: left;
   height: fit-content;
-  width: 340px;
-  margin-top: 20px;
+  width: fit-content;
+  margin-top: 10px;
 }
 
 .button4 {
@@ -289,107 +309,50 @@
   font-weight: 600;
 }
 
-/* .button2 {
-  background-color: var(--color-linen-200);
-  border: 3px solid var(--suave);
-  box-sizing: border-box;
-  height: 44px;
-  display: flex;
-  flex-direction: row;
-  padding: var(--padding-lgi) var(--padding-5xl);
-  align-items: center;
-  justify-content: center;
-} */
-
-/* .button1,
-.frame-parent1 {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+@media screen and (max-width: 990px) {
+  .slogan {
+    font-size: 110px;
+    font-weight: bolder;
+  }
 }
 
-.button1 {
-  background-color: var(--outon-soft);
-  height: 44px;
-  padding: 0 0 var(--padding-3xs);
-  box-sizing: border-box;
-  align-items: flex-start;
-  text-align: center;
-  font-size: var(--outon-button-text-size);
-} */
+@media screen and (max-width: 890px) {
+  .slogan {
+    font-size: 90px;
+    font-weight: bolder;
+    line-height: 90px;
+  }
+}
 
-/* .frame-parent1 {
-  position: absolute;
-  top: 0;
-  left: 9px;
-  align-items: center;
-  gap: var(--gap-13xl);
-} */
+@media screen and (max-width: 810px) {
+  .hero-section {
+    padding: 0;
+  }
+  .hero-pic {
+    height: 600px;
+  }
+}
 
-/* .virtual-try-on,
-.virtual-try-on-inner {
-  position: absolute;
-  top: 82.5px;
-  left: 0;
-  width: 390px;
-  height: 355px;
-} */
+@media screen and (max-width: 670px) {
+  .slogan {
+    font-size: 60px;
+  }
+  .hero-pic {
+    height: 600px;
+  }
 
-/* .virtual-try-on {
-  top: 0;
-  left: 32px;
-  width: 393px;
-  height: 520px;
-} */
+  @media screen and (max-width: 620px) {
+    .slogan {
+      font-size: 50px;
+      line-height: 50px;
+      padding: 20px;
+    }
+  }
 
-/* .virtual-try-on-wrapper {
-  position: relative;
-  background-color: var(--outon-soft);
-  width: 457px;
-  height: 520px;
-  overflow: hidden;
-  flex-shrink: 0;
-} */
-
-/* .frame-wrapper1 {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-} */
-
-/* .pexels-photo-by-lknur-elik {
-  object-fit: cover;
-} */
-
-/* .pexels-photo-by-lknur-elik,
-.rectangle-div {
-  position: relative;
-  width: 603px;
-  height: 520px;
-} */
-
-/* .frame-group {
-  position: absolute;
-  top: 104px;
-  left: 229px;
-  width: 1092px;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: var(--gap-13xl);
-} */
-
-/* .try-it-now-section-inner {
-  position: relative;
-  background-color: var(--outon-sand);
-  width: 1550px;
-  height: 728px;
-  overflow: hidden;
-  flex-shrink: 0;
-  text-align: left;
-  font-size: var(--outon-h2-size);
-  color: var(--suave);
-  font-family: var(--outon-button-text);
-} */
+  @media screen and (max-width: 520px) {
+    .slogan {
+      padding: 15px;
+      line-height: 40px;
+    }
+  }
+}
