--- a/frontend/src/styles/Phone.css
+++ b/frontend/src/styles/Phone.css
@@ -64,12 +64,13 @@
     -o-border-radius: 42.8px;
 }
 
-.bottom-images {
+
+/* .bottom-images {
     width: 375.1px;
     height: 299.7px;
     margin: 0 0 32px;
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1), 0 1.7px 3.4px 0 rgba(0, 0, 0, 0.1), 0 6px 6px 0 rgba(0, 0, 0, 0.09), 0 13.7px 8.6px 0 rgba(0, 0, 0, 0.05), 0 24.8px 10.3px 0 rgba(0, 0, 0, 0.01), 0 39.4px 11.1px 0 rgba(0, 0, 0, 0);
-}
+} */
 
 
 /* .phone {
@@ -117,6 +118,9 @@
     -ms-transition: transform 0.5s;
     -o-transition: transform 0.5s;
 } */
+
+
+/* Carousel i telefonen */
 
 .carousel img {
     width: 100%;
@@ -277,6 +281,9 @@
     color: #000;
 } */
 
+
+/* CIRKLARNA MED TEXT */
+
 .circle-row {
     display: flex;
     justify-content: flex-start;
@@ -360,9 +367,10 @@
     height: 1001.5px;
 } */
 
-#photo-container {
+
+/* #photo-container {
     text-align: center;
-}
+} */
 
 .photo-row1 {
     display: flex;
