--- a/frontend/src/styles/Footer.css
+++ b/frontend/src/styles/Footer.css
@@ -1,6 +1,10 @@
 #footer {
     background-color: #9F8EA2;
     position: relative;
+    padding: 32px 0px 26px;
+    gap: 100px;
+    width: 1520px;
+    height: 235px;
 }
 
 .footer-container {
@@ -91,6 +95,8 @@
     color: #010000;
     margin-top: 10px;
     padding-left: 10%;
+    width: 21px;
+    height: 21px;
 }
 
 .social-icons i:hover {
