--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -11,7 +11,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 16px 72px;
-  font-family: 'inter';
+  font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
