--- a/frontend/src/styles/StyleFeed.css
+++ b/frontend/src/styles/StyleFeed.css
@@ -104,7 +104,8 @@
   top: 72px;
   left: 104.5px; */
   height: 1186px;
-  width: 1187px;
+  width: 90vw;
+  /* width: 1187px; */
   flex-direction: column;
   justify-content: flex-start;
   gap: var(--gap-29xl);
