--- a/frontend/src/styles/Footer.css
+++ b/frontend/src/styles/Footer.css
@@ -1,13 +1,9 @@
-footer {
-  width: 100%;
-}
-
 .footer {
   background-color: #9f8ea2;
   position: relative;
   padding: 32px 0px 26px;
   gap: 100px;
-  width: 1520px;
+  width: 100vw;
   height: 235px;
 }
 
@@ -26,10 +22,10 @@ footer {
   height: 60px;
 }
 
-.row {
+/* .row {
   padding-top: 40px;
   padding-bottom: 40px;
-}
+} */
 
 .footer-container i:hover {
   color: #c9c6d7;
